GUI-2875: Fix policy editor textarea position to keep it visible when page scrolls

--- a/eucaconsole/static/sass/pages/iam_policy_wizard.scss
+++ b/eucaconsole/static/sass/pages/iam_policy_wizard.scss
@@ -57,6 +57,14 @@
     }
 }
 
+@media only screen and (min-width: 64.063em) {  // 64.063em = large screen width
+    // Fix position of policy editor textarea to keep it visible when page scrolls
+    #policy-preview {
+        position: fixed;
+        min-width: 26rem;
+    }
+}
+
 // Policy generator styles
 #policy-generator {
     border-color: $hpe-lightgray;
